commit de trab a github. seg clase 1h19min.

--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sistema Empleados</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>Hola Flask</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Foto</th>
+                <th>Nombre</th>
+                <th>Correo</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for empleado in empleados %}
+                <tr>
+                    <td>{{empleado[0]}}</td>
+                    <td>{{empleado[3]}}</td>
+                    <td>{{empleado[1]}}</td>
+                    <td>{{empleado[2]}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </body>
 </html>
