--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema Empleados</title>
-</head>
-<body>
+{% include 'header.html' %}
     <h1>Hola Flask</h1>
     <table>
         <thead>
@@ -28,5 +20,4 @@
             {% endfor %}
         </tbody>
     </table>
-</body>
-</html>
+{% include 'footer.html' %}
