agrego botones editar y borrar

--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -1,23 +1,28 @@
 {% include 'header.html' %}
-    <h1>Hola Flask</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Foto</th>
-                <th>Nombre</th>
-                <th>Correo</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for empleado in empleados %}
-                <tr>
-                    <td>{{empleado[0]}}</td>
-                    <td>{{empleado[3]}}</td>
-                    <td>{{empleado[1]}}</td>
-                    <td>{{empleado[2]}}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<h1>Hola Flask</h1>
+<table>
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Foto</th>
+            <th>Nombre</th>
+            <th>Correo</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for empleado in empleados %}
+        <tr>
+            <td>{{empleado[0]}}</td>
+            <td>{{empleado[3]}}</td>
+            <td>{{empleado[1]}}</td>
+            <td>{{empleado[2]}}</td>
+            <td>
+                <a href="/modify/{{empleado[0]}}">Editar</a>
+                |
+                <a href="/delete/{{empleado[0]}}">Borrar</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% include 'footer.html' %}
