--- a/src/templates/empleados/edit.html
+++ b/src/templates/empleados/edit.html
@@ -1,16 +1,32 @@
 {% include 'header.html' %}
 <form method="POST" action="/update" enctype="multipart/form-data">
-    <input hidden type="text" name="txtId" value="{{empleado[0]}}" id="txtId">
-    <label for="txtNombre">Nombre:</label>
-    <input type="text" name="txtNombre" id="txtNombre" value="{{empleado[1]}}">
-    <br>
-    <label for="txtCorreo">Correo:</label>
-    <input type="email" name="txtCorreo" id="txtCorreo" value="{{empleado[2]}}">
-    <br>
-    Foto: {{empleado[3]}}
-    <label for="txtFoto">Foto:</label>
-    <input type="file" name="txtFoto" id="txtFoto" value="{{empleado[3]}}">
-    <br>
-    <input type="submit" value="Modificar empleado">
+    <div class="card">
+        <div class="card-header">
+            Modificar empleado
+        </div>
+        <div class="card-body">
+            <p class="card-text">
+                <input hidden type="text" name="txtId" value="{{empleado[0]}}" id="txtId">
+                <div class="form-group">
+                    <label for="txtNombre">Nombre</label>
+                    <input id="txtNombre" type="text" name="txtNombre" id="txtNombre" value="{{empleado[1]}}">
+                </div>
+                <div class="form-group">
+                    <label for="txtCorreo">Correo</label>
+                    <input id="txtCorreo" type="email" name="txtCorreo" itemid="txtCorreo" value="{{empleado[2]}}">
+                </div>
+                <div class="form-group">
+                    <label for="txtFoto">Foto de perfil</label>
+                    <img class="img-thumbnail" width="100" src="{{url_for('uploads', nombreFoto=empleado[3])}}" alt="foto de perfil">
+                    <input id="txtFoto" type="file" name="txtFoto">
+                </div>
+                <div class="form-group">
+                    <input class="btn btn-success" type="submit" value="Modificar empleado">
+                    <a class="btn btn-primary" href="{{url_for('index')}}">Regresar</a>
+                </div>
+
+            </p>
+        </div>
+    </div>
 </form>
 {% include 'footer.html' %}
