--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -8,4 +8,16 @@
     <title>Sistema Empleados</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{url_for('index')}}">Sistema Empleados</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="{{url_for('index')}}">Empleados <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="{{url_for('create')}}">Alta empleado</a>
+          </div>
+        </div>
+      </nav>
 <div class="container">
