--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -11,16 +11,16 @@
     <tbody>
         {% for empleado in empleados %}
         <tr>
-            <td>{{empleado[0]}}</td>
+            <td>{{empleado.id}}</td>
             <td>
-                <img width="100" src="fotodeusuario/{{empleado[3]}}" alt="foto de perfil"> <!-- esto sirve para ocultar donde tengo mis fotos. el navegador mapea esto y le da al usuario esta dire y no la real. -->
+                <img width="100" src="fotodeusuario/{{empleado.foto}}" alt="foto de perfil"> <!-- esto sirve para ocultar donde tengo mis fotos. el navegador mapea esto y le da al usuario esta dire y no la real. -->
             </td>
-            <td>{{empleado[1]}}</td>
-            <td>{{empleado[2]}}</td>
+            <td>{{empleado.nombre}}</td>
+            <td>{{empleado.correo}}</td>
             <td>
-                <a class="btn btn-warning" href="/modify/{{empleado[0]}}">Editar</a>
+                <a class="btn btn-warning" href="/modify/{{empleado.id}}">Editar</a>
                 |
-                <a class="btn btn-danger" href="/delete/{{empleado[0]}}">Borrar</a>
+                <a class="btn btn-danger" href="/delete/{{empleado.id}}">Borrar</a>
             </td>
         </tr>
         {% endfor %}
