unifico Met. GET POST y URI en create edit etc

--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -18,9 +18,9 @@
             <td>{{empleado.nombre}}</td>
             <td>{{empleado.correo}}</td>
             <td>
-                <a class="btn btn-warning" href="/modify/{{empleado.id}}">Editar</a>
+                <a class="btn btn-warning" href="/empleado/modificar/{{empleado.id}}">Editar</a>
                 |
-                <a class="btn btn-danger" href="/delete/{{empleado.id}}">Borrar</a>
+                <a class="btn btn-danger" href="/empleado/delete/{{empleado.id}}">Borrar</a>
             </td>
         </tr>
         {% endfor %}
