--- a/src/templates/empleados/create.html
+++ b/src/templates/empleados/create.html
@@ -1,5 +1,5 @@
 {% include 'header.html' %}
-<form method="POST" action="/store" enctype="multipart/form-data">
+<form method="POST" action="/empleado/crear" enctype="multipart/form-data">
     <div class="card">
         <div class="card-header">Alta empleado</div>
         <div class="card-body">
