--- a/src/templates/empleados/edit.html
+++ b/src/templates/empleados/edit.html
@@ -1,5 +1,5 @@
 {% include 'header.html' %}
-<form method="POST" action="/update" enctype="multipart/form-data">
+<form method="POST" action="/empleado/modificar/{{empleado.id}}" enctype="multipart/form-data">
     <div class="card">
         <div class="card-header">
             Modificar empleado
