--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{url_for('static',filename='styles.css')}}">
-    <script src="{{url_for('static', filename='index.js')}}"></script>
+    <script src="{{url_for('static', filename='index.js')}}" defer></script> <!-- defer hace como si el srcipt estuviera abajo de todo! -->
     <title>Sistema Empleados</title>
 </head>
 <body>
